BUG#21811 Odd casting with date + INTERVAL arithmetic - Type casting was not consequent, thus when adding a DATE type with   a WEEK interval the result tpe was DATETIME and not DATE as is the   norm. - By changing the order of the date type enumerations the type casting   bug is resolved. To comply with the new order the array   interval_type_to_name needed to change accordingly.